# yabaitech_tokyo_vol_6

./: README.md  Satyristes  main.saty  yabai2020a.opam  yabai2020w.opam
.github/workflows/: build.yml
binary/: article.satyh  lib.satyh
lib/: code.satyh  lib.satyh
maswag/: Makefile  README.md  article.org  article.satyh  article.template.satyh  bib.satyh  init.el  local.satyh
mh/: article.satyh
nullpo_head/: article.satyh
wasabiz/: article-main.satyh  article.md  article.satyh
zeptometer/: article.satyh
